[tool.poetry]
name = "jwt-tool"
version = "2.2.6"
description = "A toolkit for validating, forging, scanning and tampering with JWTs (JSON Web Tokens)."
authors = ["Andy Tyler <msg@ticarpi.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "jwt_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.3.0"
cprint = "^1.2.2"
pycryptodomex = "^3.19.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
