[tool.poetry]
name = "jwt-tool"
version = "2.2.6"
description = "A toolkit for validating, forging, scanning and tampering with JWTs (JSON Web Tokens)."
authors = ["Andy Tyler <msg@ticarpi.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{ include = "jwt_tool" }]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.3.0"
cprint = "^1.2.2"
p = "^1.4.0"
toml = "^0.10.2"
pydantic = "^2.5.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
urlstd = "^2023.7.26.1"
pycryptodomex = "^3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
